# pointercrate-seeding

./: Cargo.toml  README.md  config.example.json
src/: config.rs  error.rs  logger.rs  main.rs
src/interactions/: player.rs  seeder.rs  submitter.rs
src/seeding/: demon.rs  mod.rs  nationality.rs  player.rs  record.rs  seeder.rs  submitter.rs  user.rs
