[package]
name = "pointercrate-seeding"
version = "0.1.0"
edition = "2021"

[dependencies]
pointercrate-demonlist = {path = "../pointercrate/pointercrate-demonlist"}
pointercrate-core = {path = "../pointercrate/pointercrate-core"}
pointercrate-user = {path = "../pointercrate/pointercrate-user", features = ["legacy_accounts"]}
tokio = { version = "1.45.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"]}
rand = "0.8"
log = "0.4.27"
serde = "1.0.228"
serde_json = "1.0.145"
fern = { version = "0.7.1", features = ["colored"] }
derive_more = { version = "2.0.1", features = ["display"] }